Contrast Fix

--- a/juicytoph/edit.css
+++ b/juicytoph/edit.css
@@ -1,10 +1,10 @@
 /*BEGIN Xbox One Controller Styling*/
 .edit.controller.xbox {
-    background: url(https://xhamrttv.github.io/juicytoph/base.gif);
+    background: url(https://xhamrttv.github.io/juicytoph/base2.gif);
 }
 
 .controller.edit {
-    background: url(https://xhamrttv.github.io/juicytoph/base.gif);
+    background: url(https://xhamrttv.github.io/juicytoph/base2.gif);
 }
 
 .edit .xbox .triggers {
@@ -128,11 +128,11 @@
 }
 
 .edit .xbox .button {
-    background: url(https://xhamrttv.github.io/juicytoph/abxy.gif);
+    background: url(https://xhamrttv.github.io/juicytoph/abxy2.gif);
 }
 
 .edit .button {
-    background: url(https://xhamrttv.github.io/juicytoph/abxy.gif);
+    background: url(https://xhamrttv.github.io/juicytoph/abxy2.gif);
 }
 
 .edit .xbox .button.pressed {
